[gd_scene load_steps=6 format=3 uid="uid://bu7xe5gyitynl"]

[ext_resource type="Script" uid="uid://cuokkw6pu1cn7" path="res://scripts/hud.gd" id="1_ahhtf"]
[ext_resource type="AudioStream" uid="uid://dcpoomgr6cjci" path="res://audios/15 - Peaceful Night.ogg" id="2_oo0fn"]
[ext_resource type="Texture2D" uid="uid://dnihu44ovvk1b" path="res://arts/background.png" id="3_5ysmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toqtt"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahhtf"]
bg_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_toqtt")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10

[node name="ScoreText" type="Label" parent="Panel/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "score: 0000000000"
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 10

[node name="RecordingText" type="Label" parent="Panel/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Recording"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Panel2" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ahhtf")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="StatusLabel" type="Label" parent="Panel2/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SHURIKEN: 0, FIREBALLS: 0, SEEKER: 0, LOOPS: 0"
vertical_alignment = 1

[node name="GameOverPanel" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game Over"
horizontal_alignment = 1

[node name="GameOverScoreText" type="Label" parent="GameOverPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0000000"
horizontal_alignment = 1

[node name="TryAgainButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Try again"

[node name="GameOverMusic" type="AudioStreamPlayer" parent="GameOverPanel"]
unique_name_in_owner = true
stream = ExtResource("2_oo0fn")

[node name="TtitlePanel" type="TextureRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5ysmq")

[node name="VBoxContainer" type="VBoxContainer" parent="TtitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -20.0
offset_right = 73.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="TtitlePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Attacker Repeater"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="TtitlePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start game"

[connection signal="pressed" from="GameOverPanel/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="TtitlePanel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
